SET(EXE_NAME simpleLite)

SET(SRCS simpleLite.c)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

INCLUDE(FindOpenGL)
INCLUDE(FindGLUT)

IF   (APPLE)
	ADD_EXECUTABLE(${EXE_NAME} MACOSX_BUNDLE ${SRCS})
ELSE (APPLE)
	ADD_EXECUTABLE(${EXE_NAME} WIN32 ${SRCS})
ENDIF(APPLE)

TARGET_LINK_LIBRARIES(${EXE_NAME} AR ARgsub_lite ARvideo ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
