SET(LIB_NAME ARvideo)

if(MSVC)
	add_definitions (/W2 /wd4996 /D "_CRT_SECURE_NO_WARNINGS" /D "LIBARVIDEO_EXPORTS")
endif()

find_package(Glib2)
find_package(LibXml2)

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/include
	${GSTREAMER_INCLUDE_DIR}
	${GLIB2_INCLUDE_DIR}
#	${LIBXML2_INCLUDE_DIR}
	)
	

SET(HDRS ${CMAKE_SOURCE_DIR}/include/AR/video.h)

SET(SRCS video.c)

ADD_DEFINITIONS(${GSTREAMER_DEFINITIONS} ${LIBXML2_DEFINITIONS} )

ADD_LIBRARY(${LIB_NAME} SHARED ${HDRS} ${SRCS})

set_target_properties(${LIB_NAME}
	PROPERTIES
	POSITION_INDEPENDENT_CODE TRUE
	)

TARGET_LINK_LIBRARIES(${LIB_NAME} 
	AR 
	${GSTREAMER_LIBRARIES}
	${GSTREAMER_BASE_LIBRARY}
	${GLIB2_LIBRARIES}
	${GOBJECT_LIBRARIES}
#	${LIBXML2_LIBRARIES}
	)

set_target_properties(${LIB_NAME} PROPERTIES
	VERSION	${ARTOOLKIT_VERSION_FULL}
	SOVERSION ${ARTOOLKIT_VERSION_SHORT}
	)

artoolkit_install(${LIB_NAME})

