SET(EXE_NAME mk_patt)

SET(SRCS mk_patt.c)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

INCLUDE(FindOpenGL)
INCLUDE(FindGLUT)

IF   (APPLE)
	ADD_EXECUTABLE(${EXE_NAME} MACOSX_BUNDLE ${SRCS})
ELSE (APPLE)
	ADD_EXECUTABLE(${EXE_NAME} WIN32 ${SRCS})
ENDIF(APPLE)

TARGET_LINK_LIBRARIES(${EXE_NAME} AR ARgsub_lite ARvideo ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
