SET(LIB_NAME ARgsub)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

SET(HDRS ${CMAKE_SOURCE_DIR}/include/AR/gsub.h)

FILE(GLOB SRCS gsub.c)

ADD_LIBRARY(${LIB_NAME} ${HDRS} ${SRCS})

TARGET_LINK_LIBRARIES(${LIB_NAME} AR)


SET(LIB_NAME ARgsub_lite)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

SET(HDRS ${CMAKE_SOURCE_DIR}/include/AR/gsub_lite.h)

FILE(GLOB SRCS gsub_lite.c)

ADD_LIBRARY(${LIB_NAME} ${HDRS} ${SRCS})

TARGET_LINK_LIBRARIES(${LIB_NAME} AR)


SET(LIB_NAME ARgsubUtil)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

SET(HDRS ${CMAKE_SOURCE_DIR}/include/AR/gsubUtil.h)

FILE(GLOB SRCS gsubUtil.c)

ADD_LIBRARY(${LIB_NAME} ${HDRS} ${SRCS})

TARGET_LINK_LIBRARIES(${LIB_NAME} AR)



