SET(LIB_NAME ARvideo)

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/include
	${GSTREAMER_INCLUDE_DIR}
	)

SET(HDRS ${CMAKE_SOURCE_DIR}/include/AR/video.h)

SET(SRCS video.c)

ADD_DEFINITIONS(${GSTREAMER_DEFINITIONS})

ADD_LIBRARY(${LIB_NAME} SHARED ${HDRS} ${SRCS})

TARGET_LINK_LIBRARIES(${LIB_NAME} 
	AR 
	${GSTREAMER_LIBRARIES}
	)

set_target_properties(${LIB_NAME} PROPERTIES
	VERSION	${ARTOOLKIT_VERSION_FULL}
	SOVERSION ${ARTOOLKIT_VERSION_SHORT}
	)

artoolkit_install(${LIB_NAME})

